# Flask-RQ2

./: .gilab-ci.yml  CHANGELOG.rst  MANIFEST.in  pyproject.toml  pytest.ini  setup.py
src/flask_rq2/: __init__.py  cli.py
tests/: test_app.py
