[project]
name = "flask-rq2"
version = "25.10.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=0.10",
    "rq>=2.3.3",
    "redis>=3.0.0",
    "rq-scheduler>=0.9.0",
]

[dependency-groups]
dev = [
    "flask~=1.1.4",
    "markupsafe~=2.0.1",
    "flake8>=7.3.0",
    "flask-cli>=0.4.0",
    "pytest~=8.3.5",
    "pytest-cov~=6.1.1",
    "rq-scheduler>=0.14.0",
    "setuptools==80.9.0",
]
